# agentic_blackboard

./: .gitignore  ASOS Architecture & Master Schema TRD v0.2.md  ASOS Schema & Code Reference Guide.md  CMakeLists.txt  README.md  asos_mcp_server.py  test_asos_db
asos-dashboard/: package-lock.json  package.json
asos-dashboard/src/app/: globals.css  layout.js  page.js
asos-dashboard/src/app/governance/: page.js
asos-dashboard/src/app/graph/: page.js
asos-dashboard/src/app/settings/: page.js
asos-dashboard/src/components/: GraphMap.js  Sidebar.js
asos-mcp/: index.js  package-lock.json  package.json
include/asos/: ApiServer.hpp  Blackboard.hpp  DeltaEngine.hpp  Librarian.hpp  Monitor.hpp  Orchestrator.hpp  Validator.hpp  schema.hpp
scratch/: dump_keys.cpp  force_seed.cpp  inspect_keys.cpp  mcp_shakedown.py  populate_asos_project.py  seed_and_wait.cpp  seed_test_graphs.py  stress_test_sync.py  test_orphan_rejection.cpp  validate_mcp.py  verify_skills.py
scripts/: inject_master_swarm.py
skills/graph-integrity-audit/: SKILL.md
skills/knowledge-capture/: SKILL.md
skills/spatial-materialization/: SKILL.md
skills/task-orchestration/: SKILL.md
src/: ApiServer.cpp  Blackboard.cpp  DeltaEngine.cpp  Librarian.cpp  Monitor.cpp  Orchestrator.cpp  Validator.cpp  main.cpp  main_verify.cpp
